# skilltool-infra

./: .env.example  .gitignore  README.md  pyproject.toml
.github/repository_metadata/: gh_repo.yml
.github/workflows/: create-release-branch.yml  deploy-registry.yml  label_generator.yml  post-pull-request.yml
client/: README.md  pyproject.toml
client/src/skilltool/: __init__.py  api.py  cli.py  commands.py  config.py  output.py
client/src/skilltool/transport/: __init__.py  base.py  http.py  ssh.py
docs/: transport.md
docs/development-rules/: BRANCH_STRATEGY.md  VERSIONING_POLICY.md
docs/implementations/: architecture.md  limitations.md  operations.md  package-manifest.md  publishing.md  repository-architecture.md
docs/lintrules/: markdownlint.md
registry/: .env.example  Dockerfile  docker-compose.yml  server.py  server_cli.py  users.example.toml
setup/client/: install.sh  uninstall.sh
setup/server/: add-ssh-key.sh  add-user.sh  install.sh  revoke-user.sh
setup/server/systemd/: skilltool.service
tests/: conftest.py
tests/e2e/: test_ssh_flow.py
tests/integration/: test_server_cli.py  test_server_html.py  test_skill_toml_publish.py  test_ssh_transport.py
tests/unit/: test_config.py  test_skill_toml.py  test_ssh_path.py
