# Top-level pyproject for the skilltool-infra repository.
# The shippable client package lives under client/ and has its own pyproject.

[project]
name = "skilltool-infra"
version = "0.2.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that shell out to subprocesses (still fast, just slower than unit)",
]
