# Top-level pyproject for the skilltool-infra repository.
# The shippable client package lives under client/ and has its own pyproject.

[project]
name = "skilltool-infra"
version = "0.2.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Client deps (imported transitively via skilltool modules in tests)
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    # Server deps (integration tests use fastapi.testclient)
    "fastapi>=0.115",
    "python-multipart>=0.0.12",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that shell out to subprocesses (still fast, just slower than unit)",
]
